--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
         <img src="./Images/bold.svg" alt="bold">
         <img src="./Images/italic.svg" alt="italic">
         <img src="./Images/undeline.svg" alt="underline">
-        <img src="./Images/left-align.svg" alt="left-align">
-        <img src="./Images/justify.svg" alt="justify">
-        <img src="./Images/right-align.svg" alt="right-align">
+        <img src="./Images/left-align.svg" alt="left-align" class="alignment">
+        <img src="./Images/justify.svg" alt="justify" class="alignment">
+        <img src="./Images/right-align.svg" alt="right-align" class="alignment">
+        <div class="color-prop">
+            <img src="./Images/fontcolor.svg" alt="fontcolor">
+            <input type="color" class="fontcolor-prop">
+        </div>
+        <div class="bgcolor-prop">
+            <img src="./Images/bgcolor.svg" alt="bgcolor">
+            <input type="color" class="cellbgcolor-prop">
+        </div>
     </div>
     <div class="formula-actions-cont">
         <input type="text" class="address-bar">
@@ -64,14 +72,14 @@
         </div>
         <div class="sheets-folder-cont">
             <div class="sheet-folder">Sheet1</div>
-            <div class="sheet-folder">Sheet1</div>
+            <!-- <div class="sheet-folder">Sheet1</div> -->
         </div>
     </div>
 
 
 
 
-
     <script src="./index.js"></script>
+    <script src="./cellprop.js"></script>
 </body>
 </html>
